k8s/kustomize/common/tls-config.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security

spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
