k8s/kustomize/common/deploy-crossbar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crossbar-deploy
  # namespace: iracelog
  labels:
    app: crossbar
  annotations: 
spec:
  selector:
    matchLabels:
      app: crossbar
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: crossbar
    spec:
      containers:
      - name: crossbar
        image: crossbario/crossbar:cpy-amd64-21.2.1   
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        # this looks strange but it works to replace a config file 
        - name: config-volume
          mountPath: /node/.crossbar/config.json
          subPath: config.json
      volumes:
      - name: config-volume
        configMap:
          name: crossbar-config
