k8s/kustomize/common/deploy-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iracelog-frontend-deploy
  # namespace: iracelog
  labels:
    app: iracelog-app
  annotations: 
spec:
  selector:
    matchLabels:
      app: iracelog-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: iracelog-app
    spec:
      containers:
      - name: iracelog-frontend
        image: ghcr.io/mpapenbr/iracelog-web:v0.11.1        
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        # this looks strange but it works to replace a config file 
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.json
          subPath: config.json
      volumes:
      - name: config-volume
        configMap:
          name: frontend-config
