k8s/kustomize/common/deploy-ism-analysis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iracelog-ism-analysis-deploy
  
  labels:
    app: iracelog-ism-analysis
  annotations: 
spec:
  selector:
    matchLabels:
      app: ism-analysis
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ism-analysis
    spec:
      containers:
      - name: ism-analysis
        image: ghcr.io/mpapenbr/iracelog-analysis-service:v0.1.1    
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
