k8s/kustomize/common/deploy-ism-archiver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iracelog-ism-archiver-deploy
  
  labels:
    app: iracelog-ism-archiver
  annotations: 
spec:
  selector:
    matchLabels:
      app: iracelog-ism-archiver
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: iracelog-ism-archiver
    spec:
      containers:
      - name: iracelog-ism-archiver
        image: ghcr.io/mpapenbr/iracelog-service-manager:v0.2.2    
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["/bin/bash"]
        args: ["-c", "ism --check http://iracelog-crossbar-service:8080/info archiver"]
