k8s/kustomize/common/service-crossbar.yml
apiVersion: v1
kind: Service
metadata:
  name: iracelog-crossbar-service
  # namespace: iracelog
  labels:
    app: iracelog-crossbar
spec:
  type: NodePort
  selector:
    app: iracelog-crossbar
  ports:
    - protocol: TCP
      name: crossbar
      nodePort: 30002
      port: 8080
      targetPort: 8080
