k8s/kustomize/common/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  # namespace: iracelog
  labels:
    app: iracelog-app
spec:
  # type: LoadBalancer
  selector:
    app: iracelog-app
  ports:
    - protocol: TCP
      name: frontend
      port: 80
      targetPort: 80
